# kis_unified_sts

./: .coverage  .dockerignore  .env.dev  .env.example  .env.live.example  .env.paper.example  .env.production.example  .gitignore  .importlinter  AGENTS.md  CACHE_VERIFICATION_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Dockerfile.forecasting  Dockerfile.mlflow  Dockerfile.prod  Dockerfile.strategy_builder_ui  Dockerfile.stream_exporter  Dockerfile.test  HTTP_AUTH_VERIFICATION.md  HYBRID_LEARNING_DATA_PIPELINE.md  MIGRATION_GUIDE.md  Makefile  README.md  SUBTASK-2-2-SUMMARY.md  SUBTASK_2_3_SUMMARY.md  VERIFICATION.md  WEBSOCKET_AUTH_VERIFICATION.md  backtest_comparison_results.json  boilerplate-verification-summary.md  config_examples.yaml  deep-research-report.md  docker-compose.dev.yml  docker-compose.yml  kis_unified_sts.code-workspace  manual_security_verification.sh  orchestrator_strategy_manager_verification_report.txt  plans.md  pyproject.toml  (+15 more)
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md
.serena/: project.yml
caddy/: Caddyfile
cli/: __init__.py  main.py
config/: api.yaml  arbitrage.yaml  clickhouse.yaml  daily_data_quality.yaml  daily_scanner.yaml  decision_engine.yaml  event_taxonomy.yaml  execution.yaml  feedback_reports.yaml  forecasting.yaml  fusion_ranker.yaml  futures_context.yaml  futures_contract.yaml  futures_live.yaml  futures_margin.yaml  futures_monitor.yaml  hedge_advisor.yaml  kill_switch.yaml  llm.yaml  llm_scorecard.yaml  macro_sources.yaml  market_risk.yaml  market_risk_gate.yaml  market_risk_validation.yaml  market_schedule.yaml  market_structure.yaml  monitoring.yaml  news_scoring.yaml  news_sources.yaml  night_futures.yaml  pipeline.yaml  portfolio.yaml  regime_model_mapping.yaml  risk.yaml  risk_management.yaml  scheduled_events.yaml  shadow_loggers.yaml  stock_bear_override.yaml  stock_builder_preset_experiment.yaml  stock_coverage.yaml  (+17 more)
core/: __init__.py  data_engine.py  indicator_engine.py  state_manager.py  strategy_engine.py
dashboard-frontend/: RESPONSIVE_TEST_VERIFICATION.md  index.html  package-lock.json  package.json
deploy/: README.md  scheduler.crontab
docs/: 2026-07-08_new_architencture.md  BACKTEST_PERFORMANCE_REVIEW.md  BACKTEST_RESULTS_INTERPRETATION_GUIDE.md  (+25 more)
tos/: pyproject.toml
tos/src/tos/: __init__.py
tos/src/tos/authority/: __init__.py  _base.py  predicates.py  records.py  state.py  vocabulary.py
tos/src/tos/canonical/: __init__.py  _base.py  canonicalization.py  record_pair.py
tos/src/tos/capsule/: __init__.py  _base.py  canonicalization.py  capsule.py  consistency_cut.py  context_generation.py  field_evaluation.py  field_state.py  lineage.py  observation.py  predicates.py  snapshot.py
tos/src/tos/dsl/: __init__.py  _base.py  admissibility.py  bounds.py  candidate.py  determinism.py  evidence.py  outcome.py  proposal.py  strategy.py  vocabulary.py
tos/src/tos/evidence/: __init__.py  _base.py  elements.py  envelope.py  gap.py  ledger.py  policy.py  predicates.py  receipt.py  replay.py
tos/src/tos/liveauth/: __init__.py  _base.py  predicates.py  records.py  state.py  vocabulary.py
tos/src/tos/ordering/: __init__.py  _ordering.py
tos/src/tos/orthostate/: __init__.py  _base.py  predicates.py  records.py  state.py  vocabulary.py
tos/src/tos/rcl/: __init__.py  _base.py  authority.py  predicates.py  records.py  state.py  vector.py  vocabulary.py
tos/src/tos/time/: __init__.py  domains.py  elements.py  ordering.py  predicates.py  snapshot.py
tos/tests/: __init__.py  _evidence_strategies.py  _strategies.py  _time_strategies.py  test_admission.py  test_canonicalization.py  test_classification_authority.py  test_correction.py  test_digest_binding.py  test_evidence_chain.py  test_evidence_conflict.py  test_evidence_digest_binding.py  test_evidence_gap_state.py  test_evidence_import_closure.py  test_evidence_ordering.py  test_evidence_predicates.py  test_evidence_replay.py  test_evidence_required_covered.py  test_evidence_retention.py  test_import_closure.py  test_lineage.py  test_non_revival.py  test_package.py  test_required_covered.py  test_result_conservatism.py  test_snapshot_validity.py  test_time_continuity.py  test_time_cross_continuity_age.py  test_time_freshness.py  test_time_fsm.py  test_time_import_closure.py  test_time_lifetime.py  test_time_ordering.py  test_time_references.py  test_time_snapshot.py
tos/tests/authority/: _authority_strategies.py  test_authority_conflict.py  test_authority_currentness.py  test_authority_dominance.py  test_authority_epoch.py  test_authority_import_closure.py  test_authority_lease.py  test_authority_non_revival.py  test_authority_partition.py  test_authority_rearm.py  test_authority_required_covered.py  test_authority_validity.py
tos/tests/dsl/: __init__.py  _dsl_strategies.py  test_dsl_admissibility.py  test_dsl_bounds.py  test_dsl_determinism.py  test_dsl_import_closure.py  test_dsl_output_semantics.py  test_dsl_required_covered.py
tos/tests/liveauth/: _liveauth_strategies.py  test_liveauth_continuous_validity.py  test_liveauth_default_non_live.py  test_liveauth_dual_control.py  test_liveauth_expansion.py  test_liveauth_fresh_identity.py  test_liveauth_halt.py  test_liveauth_import_closure.py  test_liveauth_layering.py  test_liveauth_lifecycle.py  test_liveauth_rearm.py  test_liveauth_records.py  test_liveauth_scope.py
tos/tests/orthostate/: _orthostate_strategies.py  test_orthostate_composite.py  test_orthostate_coupling.py  test_orthostate_direction.py  test_orthostate_import_closure.py  test_orthostate_ownership.py  test_orthostate_rcl_comparator.py  test_orthostate_restart.py  test_orthostate_transitions.py  test_orthostate_vocabulary.py
tos/tests/rcl/: _rcl_strategies.py  test_rcl_append_only.py  test_rcl_authority.py  test_rcl_capability.py  test_rcl_conflict.py  test_rcl_digest.py  test_rcl_fence.py  test_rcl_import_closure.py  test_rcl_partition.py  test_rcl_projection.py  test_rcl_reducer.py  test_rcl_required_covered.py  test_rcl_snapshot.py  test_rcl_transition.py
(+2746 files in other folders)
